--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-transition-group": "^4.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "react-redux": "^8.1.1",
     "react-transition-group": "^4.4.5"
   },
